--- a/package.json
+++ b/package.json
@@ -10,33 +10,42 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-av": "~13.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "jwt-decode": "^3.1.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-expo-fancy-alerts": "^2.1.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.3",
+    "react-native-sheet": "^0.1.6",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "13.4.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.5.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "uuid": "^9.0.0"
   },
