code MVC base  missing function

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -19,8 +20,10 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-asset": "^8.9.1",
     "expo-av": "~13.2.1",
     "expo-device": "~5.2.1",
+    "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
@@ -29,10 +32,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-clean-form": "^0.5.0",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-expo-fancy-alerts": "^2.1.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-push-notification": "^8.1.1",
@@ -47,6 +53,9 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10",
+    "react-native-wheel-picker": "^1.2.0",
+    "react-native-wheel-scrollview-picker": "^2.0.1",
+    "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
