--- a/app.json
+++ b/app.json
@@ -4,27 +4,37 @@
     "slug": "PersonalMedicineCabinet",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/med-track.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-img.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
+    "notification": {
+      "icon": "./assets/med-track.png"
+    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.kabutoshinki.PersonalMedicineCabinet"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/med-track.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.kabutoshinki.PersonalMedicineCabinet"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "37de0817-3764-408a-b5d4-52fa9325d83d"
+      }
     }
   }
 }
