--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -31,8 +30,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
-    "react-native-clean-form": "^0.5.0",
+    "react-native": "0.71.8",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-expo-fancy-alerts": "^2.1.1",
     "react-native-gesture-handler": "~2.9.0",
@@ -43,7 +41,7 @@
     "react-native-paper": "^5.8.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
     "react-native-sheet": "^0.1.6",
@@ -51,10 +49,9 @@
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.5.1",
+    "react-native-toast-message": "^2.1.6",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10",
-    "react-native-wheel-picker": "^1.2.0",
-    "react-native-wheel-scrollview-picker": "^2.0.1",
     "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0"
   },
