--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
